[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fastapi-alertengine"
version         = "1.1.0"
description     = "Production-grade request metrics middleware and SLO alert engine for FastAPI + Redis Streams"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "AnchorFlow", email = "support@anchorflow.com" }]
keywords        = ["fastapi", "redis", "observability", "alerting", "sre", "metrics", "middleware"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "starlette>=0.27",
    "redis>=4.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
dev     = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "fakeredis>=2.10",
]

[project.urls]
Homepage    = "https://anchorflow.com/tofamba"
Repository  = "https://github.com/Tandem-Media/fastapi-alertengine"
"Bug Tracker" = "https://github.com/Tandem-Media/fastapi-alertengine/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_alertengine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
