[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-alertengine"
version = "1.1.0"
description = "FastAPI AlertEngine: fintech-grade request monitoring (p95 latency + error rate) without Prometheus."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tandem Media" }
]
license = "MIT"

dependencies = [
  "fastapi",
  "redis",
  "pydantic-settings",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/Tandem-Media/fastapi-alertengine"